--- a/base.css
+++ b/base.css
@@ -1,7 +1,7 @@
 #forest {
   width: 100%;
   height: 100%;
-  background: url("https://wallpapertag.com/wallpaper/middle/6/2/2/572651-pokemon-forest-background-1920x1200-samsung.jpg");
+  background: url("./pokeBackground.jpeg");
 }
 
 #pokedex {
@@ -185,6 +185,12 @@
   border: #71CDF4 5px solid;
   color: gray;
   cursor: pointer;
+}
+
+.evoSprites {
+  display: block;
+  height: 100px;
+  width: 100px;
 }
 
 /*# sourceMappingURL=base.css.map */
