--- a/base.scss
+++ b/base.scss
@@ -1,7 +1,7 @@
 #forest {
   width: 100%;
   height: 100%;
-  background: url('https://wallpapertag.com/wallpaper/middle/6/2/2/572651-pokemon-forest-background-1920x1200-samsung.jpg');
+  background: url('./pokeBackground.jpeg');
 
 }
 
@@ -16,7 +16,7 @@
   display: grid;
   grid-template-columns: 5% 40% 10% 40% 5%;
   grid-template-rows: 3% 12% 40% 20% 20% 5%;
-  border-radius: 2%;
+  border-radius: 2%;  
   font-family: 'Press Start 2P';
 }
 
@@ -185,4 +185,9 @@
   border: #71CDF4 5px solid;
   color: gray;
   cursor: pointer;
+}
+.evoSprites {
+  display: block;
+  height: 100px;
+  width: 100px;
 }
